--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <div class="container header-wrapper col-xs-12 col-sm-12 col-md-12 col-lg-12">
-	<nav class="navbar navbar-default  ">
+	<nav class="navbar navbar-default  navbar-fixed-top ">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
