--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,35 +1,40 @@
-<div class="container header-wrapper col-xs-12 col-sm-12 col-md-12 col-lg-12">
-	<nav class="navbar navbar-default  navbar-fixed-top ">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-    </div>
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li><a href="">HOME</a></li>
-        <li><a href="">ABOUT US</a></li>
-        <li><a href="">TEAM</a></li>
-        <li><a href="">ACTIVITIES</a></li>
-        <li><a href="">PROJECTS</a></li>
-        <li><a href="">PARTNERS</a></li>
-        <li><a href="">GALLERY</a></li>
-        <li><a href="">EVENTS</a></li>
-        <li><a href="">FAQ</a></li>
-        <li><a href="">CONTACTS</a></li>
-      </ul>
-     </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 no-padding">
+
+	<div class="header container col-xs-12 col-sm-12 col-md-10 col-lg-8 col-md-offset-1 col-lg-offset-2">
+
+		<div class="header-logo col-xs-6 col-sm-4 col-md-4 col-lg-4">
+
+			<table>
+				<tr>
+					<td><%= image_tag 'logo.jpg' %></td>
+				</tr>
+			</table>
+		</div>
+
+		<div class="header-text col-xs-6 col-sm-5 col-md-6 col-lg-6">
+			<table>
+				<tr>
+					<td> Харкiвська координацiйна рада молодих юристiв</td>
+				</tr>
+			</table>
+		</div>
+
+		<div class="header-socials col-xs-12 col-sm-3 col-md-2 col-lg-2">
+			<table>
+				<tr>
+					<td>
+						<ul>
+							<li>
+						<i class="fa fa-facebook-square"> </i>
+						</li>
+						<li>
+						<i class="fa fa-vk"> </i>
+						</li>
+						
+						</td>
+				</tr>
+			</table>
+		</div>
+
+	</div>
 </div>
-<div class="header-logo col-xs-12 col-sm-12 col-md-12 col-lg-12">
-	<div class="logo"></div>
-	<div class="socials-header"></div>	
- </div>
- 
