--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,11 @@
 </head>
 <body>
 
-
+<%= render 'layouts/menu'%>
+<div class="wholediv">
 <%= render 'layouts/header'%>
 <%= yield %>
 <%= render 'layouts/footer'%>
+</div>
 </body>
 </html>
