--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,5 +1,6 @@
 .header.container{
   padding: 0;
+  float: none;
 }
 
 .header-logo{
@@ -23,6 +24,7 @@
     list-style-type: none;
     padding: 0;
     margin: 0;
+    text-align: right;
     & li{
       width: 50px;
       height: 50px;
