--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,8 @@
 <div class="container footer-wrapper col-xs-12 col-sm-12 col-md-12 col-lg-12">
-	<div class="copy"></div>
+	<div class="copy">
+		<p>© Design and development </p>
+		<a href="#"><%= image_tag logo %></a>
+	</div>
 	<div class="socials-footer"></div>
 	
 </div>
