--- a/app/views/events/title_page.html.erb
+++ b/app/views/events/title_page.html.erb
@@ -1,1 +1,156 @@
-<h1> TITLE </h1>
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+    <li data-target="#myCarousel" data-slide-to="3"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <%= image_tag 'slides/slide1.jpg'%>
+      <div class="carousel-caption">
+        <h3>Chania</h3>
+        <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+      </div>
+    </div>
+
+    <div class="item">
+      <%= image_tag 'slides/slide2.jpg'%>
+      <div class="carousel-caption">
+        <h3>Chania</h3>
+        <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+      </div>
+    </div>
+
+    <div class="item">
+      <%= image_tag 'slides/slide3.jpg'%>
+      <div class="carousel-caption">
+        <h3>Flowers</h3>
+        <p>Beatiful flowers in Kolymbari, Crete.</p>
+      </div>
+    </div>
+
+    <div class="item">
+      <%= image_tag 'slides/slide4.jpg'%>
+      <div class="carousel-caption">
+        <h3>Flowers</h3>
+        <p>Beatiful flowers in Kolymbari, Crete.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="title container col-xs-12 col-sm-12 col-md-10 col-lg-9">
+	<div class="title-text-header col-xs-12 col-sm-12 col-md-12 col-lg-12">
+		<span class="title-head"> НАША ДIЯЛЬНIСТЬ </span>
+	</div>
+	<div class="title-text-items  col-xs-12 col-sm-12 col-md-12 col-lg-12">
+		<div class="title-text-left text-column  col-xs-12 col-sm-4 col-md-4 col-lg-4">
+			<%= image_tag 'galstuk.png'%>
+			<span class="title-caption"> ПIДВИЩЕННЯ РIВНЯ ПРАВОВИХ ЗНАНЬ НАСЕЛЕННЯ </span>
+			<p>
+				Любя, съешь щипцы, — вздохнёт мэр, — кайф жгуч. Шеф взъярён тчк щипцы с эхом гудбай Жюль. Эй, жлоб! Где туз? Прячь юных съёмщиц в шкаф. Экс-граф? Плюш изъят. Бьём чуждый цен хвощ! Эх, чужак! Общий съём цен шляп (юфть) — вдрызг! 
+			</p>
+		</div>
+		<div class="title-text-center text-column  col-xs-12 col-sm-4 col-md-4 col-lg-4">
+			<%= image_tag 'jews.png'%>
+			<span class="title-caption"> ПОШУК НОВИХ ФОРМ ПРАВООСВШТНЬОЇ ТА ПРАВОВИХОВНО ДIЯЛЬНОСТI </span>
+			<p>
+				Любя, съешь щипцы, — вздохнёт мэр, — кайф жгуч. Шеф взъярён тчк щипцы с эхом гудбай Жюль. Эй, жлоб! Где туз? Прячь юных съёмщиц в шкаф. Экс-граф? Плюш изъят. Бьём чуждый цен хвощ! Эх, чужак! Общий съём цен шляп (юфть) — вдрызг! 
+			</p>
+		</div>
+		<div class="title-text-right text-column  col-xs-12 col-sm-4 col-md-4 col-lg-4">
+			<%= image_tag 'trophy.png'%>
+			<span class="title-caption"> ПIДВИЩЕННЯ РIВНЯ ТА ЯКОСТI ТЕОРЕТИЧНОЇ I ПРАКТИЧНОЇ  ПIДГОТОВКИ СТУДЕНТIВ-ПРАВНИКIВ ТА МОЛОДИХ ЮРИСТIВ </span>
+			<p>
+				Любя, съешь щипцы, — вздохнёт мэр, — кайф жгуч. Шеф взъярён тчк щипцы с эхом гудбай Жюль. Эй, жлоб! Где туз? Прячь юных съёмщиц в шкаф. Экс-граф? Плюш изъят. Бьём чуждый цен хвощ! Эх, чужак! Общий съём цен шляп (юфть) — вдрызг! 
+			</p>
+		</div>
+		<div class="title-text-left text-column  col-xs-12 col-sm-4 col-md-4 col-lg-4">
+			<%= image_tag 'galstuk.png'%>
+			<span class="title-caption"> ПОБУДОВА ПРАВОВОЇ ДЕРЖАВИ </span>
+			<p>
+				Любя, съешь щипцы, — вздохнёт мэр, — кайф жгуч. Шеф взъярён тчк щипцы с эхом гудбай Жюль. Эй, жлоб! Где туз? Прячь юных съёмщиц в шкаф. Экс-граф? Плюш изъят. Бьём чуждый цен хвощ! Эх, чужак! Общий съём цен шляп (юфть) — вдрызг! 
+			</p>
+		</div>
+		<div class="title-text-left text-column  col-xs-12 col-sm-4 col-md-4 col-lg-4">
+			<%= image_tag 'galstuk.png'%>
+			<span class="title-caption"> ПОШИРЕННЯ ЗАГАЛЬНОПРАВОВИХ IДЕЙ </span>
+			<p>
+				Любя, съешь щипцы, — вздохнёт мэр, — кайф жгуч. Шеф взъярён тчк щипцы с эхом гудбай Жюль. Эй, жлоб! Где туз? Прячь юных съёмщиц в шкаф. Экс-граф? Плюш изъят. Бьём чуждый цен хвощ! Эх, чужак! Общий съём цен шляп (юфть) — вдрызг! 
+			</p>
+		</div>
+		<div class="title-text-left text-column  col-xs-12 col-sm-4 col-md-4 col-lg-4">
+			<%= image_tag 'galstuk.png'%>
+			<span class="title-caption"> РОЗВИТОК ПРАВОВОЇ СВIДОМОСТI I КУЛЬТУРИ НАСЕЛЕННЯ </span>
+			<p>
+				Любя, съешь щипцы, — вздохнёт мэр, — кайф жгуч. Шеф взъярён тчк щипцы с эхом гудбай Жюль. Эй, жлоб! Где туз? Прячь юных съёмщиц в шкаф. Экс-граф? Плюш изъят. Бьём чуждый цен хвощ! Эх, чужак! Общий съём цен шляп (юфть) — вдрызг! 
+			</p>
+		</div>
+	</div>
+</div>
+
+<div class="clearfix"> </div>
+
+<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 painted">
+<div class="title-about-us container col-xs-12 col-sm-12 col-md-10 col-lg-9">
+	<span> ХТО МИ ТАКI </span>
+	<div class="about-us-carousel col-xs-12 col-sm-5 col-md-4 col-lg-4">
+		<%= render 'carousel_team'%>
+	</div>
+	<div class="about-us-text col-xs-12 col-sm-7 col-md-8 col-lg-8">
+		<p>
+		  Координаційна рада молодих юристів при Головному управлінні юстиції у Харківській області  була створена у 2008 році Наказом начальника ГУ юстиції у Харківській області. Координаційна рада молодих юристів є  консультативно – дорадчим  органом при Головному  управлінні юстиції у Харківській області, який  створюється  з метою об’єднання  зусиль молодих  юристів  в утвердженні  високої ролі  професії юриста, координації  діяльності, пов’язаної  з підвищенням  якості  підготовки  фахівців в галузі права, залучення молодих правників правоосвітньої та правовиховної роботи.
+		  </p>
+	</div>
+</div>
+</div>
+
+
+<div class="partners container col-xs-12 col-sm-12 col-md-12 col-lg-12">
+	<a href="google.com">
+		<%= image_tag 'partners/geyc.png'%>
+	</a>
+	<a href="google.com">
+		<%= image_tag 'partners/tdm.png'%>
+	</a>
+	<a href="google.com">
+		<%= image_tag 'partners/vivid.png'%>
+	</a>
+	<a href="google.com">
+		<%= image_tag 'partners/droni.png'%>
+	</a>
+</div>
+
+<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 painted">
+	<div class="title-team container col-xs-12 col-sm-12 col-md-10 col-lg-9">
+		<div class="team-member col-xs-12 col-sm-6 col-md-3 col-lg-3">
+			<%= image_tag 'team/team2.jpg'%>
+			<span class="team-member-name"> ЖУКОВСЬКИЙ ЄВГЕН </span>
+			<span class="info"> Голова КРМЮ. Студент Інституту підготовки кадрів для органів юстиції України НЮУ                 
+                   ім. Ярослава Мудрого. </span>
+		</div>
+		<div class="team-member col-xs-12 col-sm-6 col-md-3 col-lg-3">
+			<%= image_tag 'team/team2.jpg'%>
+			<span class="team-member-name"> ПЕРЕСТЮК ОЛЕКСАНДР </span>
+			<span class="info"> Перший заступник Голови КРМЮ. Студент Інституту підготовки кадрів для органів юстиції України НЮУ ім. Ярослава Мудрого. </span>
+		</div>
+		<div class="team-member col-xs-12 col-sm-6 col-md-3 col-lg-3">
+			<%= image_tag 'team/team2.jpg'%>
+			<span class="team-member-name"> ПОНОМАРЕНКО ЄВГЕН </span>
+			<span class="info"> Другий заступник Голови КРМЮ. Студент Інституту підготовки кадрів для органів    
+                     прокуратури України НЮУ ім. Ярослава Мудрого. </span>
+		</div>
+		<div class="team-member col-xs-12 col-sm-6 col-md-3 col-lg-3">
+			<%= image_tag 'team/team2.jpg'%>
+			<span class="team-member-name"> ГРИЦАЙ ВIКТОРIЯ </span>
+			<span class="info"> Секретар КРМЮ. Студентка Інституту підготовки кадрів для органів юстиції України 
+                     НЮУ ім. Ярослава Мудрого. </span>
+		</div>
+		
+	</div>
+</div>
