--- a/app/views/events/about_us.html.erb
+++ b/app/views/events/about_us.html.erb
@@ -1,4 +1,25 @@
-<div class="about-us-wrapper container col-xs-12 col-sm-12 col-md-12 col-lg-12">
-	<h2>Who we are</h2>
-	<p>bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla-bla</p>
+<div class="about-us-wrapper col-xs-12 col-sm-12 col-md-12 col-lg-12">
+	<h2>О нас</h2>
+	<p>Координаційна рада молодих юристів при Головному управлінні юстиції у Харківській
+		області  була створена у 2008 році Наказом начальника ГУ юстиції у Харківській області.
+		Координаційна рада молодих юристів є  консультативно – дорадчим  органом при Головному
+		управлінні юстиції у Харківській області, який  створюється  з метою об’єднання  зусиль молодих
+		юристів  в утвердженні  високої ролі  професії юриста, координації  діяльності, пов’язаної 
+		з підвищенням  якості  підготовки  фахівців в галузі права, залучення молодих правників
+		 правоосвітньої та правовиховної роботи.</p>
+		 
+		 <p>Основні завдання та напрямки діяльності Координаційної ради:</p>
+		 <ul>
+		 	<li>підвищення рівня  правових знань населення;</li>
+		 	<li>пошук нових форм  правоосвітньої та правовиховної діяльності;</li>
+		 	<li>підвищення  рівня  та якості   теоретичної  і  практичної  підготовки 
+		 		 студентів  - правників та молодих юристів;</li>
+		 	<li>побудова правової держави;</li>
+		 	<li>поширення загальноправових ідей; </li>
+		 	<li>розвиток правової свідомості та правової культури населення.</li>
+		 </ul>
+		 
+		 <p>КРМЮ проводить різноманітні правові заходи, а саме: лекції, семінари, бесіди, юридичні форуми,
+		 	брейн-ринги, правові ігри тощо. Слухачами даних заходів є школярі, студенти, робітники підприємств,
+		 	особи пенсійного віку. </p>
 </div>
