--- a/app/views/events/contacts.html.erb
+++ b/app/views/events/contacts.html.erb
@@ -1,9 +1,13 @@
 <div class="contacts-wrapper container col-xs-12 col-sm-12 col-md-12 col-lg-12">
 	
 		<div class="contacts col-xs-12 col-sm-12 col-md-12 col-lg-12">
-			<div class="phone"></div>
-			<div class="questions-form"></div>
+			<div class="foto-contacts col-xs-12 col-sm-6 col-md-6 col-lg-6"></div>
+			<div class="adress col-xs-12 col-sm-6 col-md-6 col-lg-6">
+				<span>Тел.: 093 250 12 12</span>
+				<span>E-mail: evgeniy.zhukovskiy.big@gmail.com</span>
+				<span>Адреса: вул. Ярослава Мудрого, 16, м. Харків.</span>
+			</div>
 			
 		</div>
-	
+		<div class="questions-formcol-xs-12 col-sm-8 col-md-offset-3 col-md-6 col-lg-offset-3 col-lg-6"></div>
 </div>
