--- a/app/views/events/team.html.erb
+++ b/app/views/events/team.html.erb
@@ -1,7 +1,70 @@
-<div class="team-wrapper container col-xs-12 col-sm-12 col-md-12 col-lg-12">
+<div class="team-wrapper col-xs-12 col-sm-12 col-md-12 col-lg-12">
+	
 	<div class="our-team col-xs-12 col-sm-12 col-md-12 col-lg-12"> 
-		<span class="team-name"></span>>
+		<span class="team-name">Жуковський Євген</span>>
 		<div class="team-face col-xs-2 col-sm-2 col-md-2 col-lg-2"></div>
-		<div class="team-text col-xs-10 col-sm-10 col-md-10 col-lg-10"></div>
+		<div class="team-text col-xs-10 col-sm-10 col-md-10 col-lg-10">
+			<p> Голова КРМЮ. Студент Інституту підготовки кадрів для органів юстиції України НЮУ                 
+                   ім. Ярослава Мудрого.</p>
+			<span>Тел.: 093 250 12 12</span>
+			<span>Електронна адреса: evgeniy.zhukovskiy.big@gmail.com</span>
+		</div>
+	</div>
+	
+	<div class="our-team col-xs-12 col-sm-12 col-md-12 col-lg-12"> 
+		<span class="team-name">Перестюк Олександр</span>>
+		<div class="team-face col-xs-2 col-sm-2 col-md-2 col-lg-2"></div>
+		<div class="team-text col-xs-10 col-sm-10 col-md-10 col-lg-10">
+			<p> Перший заступник Голови КРМЮ. Студент Інституту підготовки кадрів для органів юстиції 
+				України НЮУ ім. Ярослава Мудрого.</p>
+			<span>Тел.:  067 388 61 51</span>
+			<span>Електронна адреса: oleksandr.perestiuk@ukr.net</span>
+		</div>
+	</div>
+	
+	<div class="our-team col-xs-12 col-sm-12 col-md-12 col-lg-12"> 
+		<span class="team-name">Пономаренко Євген</span>>
+		<div class="team-face col-xs-2 col-sm-2 col-md-2 col-lg-2"></div>
+		<div class="team-text col-xs-10 col-sm-10 col-md-10 col-lg-10">
+			<p> Другий заступник Голови КРМЮ. Студент Інституту підготовки кадрів для органів    
+                 прокуратури України НЮУ ім. Ярослава Мудрого.</p>
+			<span>Тел.:</span>
+			<span>Електронна адреса:</span>
+		</div>
+	</div>
+	
+	<div class="our-team col-xs-12 col-sm-12 col-md-12 col-lg-12"> 
+		<span class="team-name">Грицай Вікторія</span>>
+		<div class="team-face col-xs-2 col-sm-2 col-md-2 col-lg-2"></div>
+		<div class="team-text col-xs-10 col-sm-10 col-md-10 col-lg-10">
+			<p>  Секретар КРМЮ. Студентка Інституту підготовки кадрів для органів юстиції України 
+                  НЮУ ім. Ярослава Мудрого.</p>
+			<span>Тел.:093 818 89 57</span>
+			<span>Електронна адреса: grucayvika@hotmail.com </span>
+		</div>
+	</div>
+	<div class="other-team col-xs-12 col-sm-12 col-md-12 col-lg-12">
+		<div class="other-team col-xs-12 col-sm-6 col-md-5 col-lg-5">
+			<span>Борис Тарас</span>
+			<span>Крайня Катерина</span>
+			<span>Коновалова Ілона</span>
+			<span>Токарчук Тетяна</span>
+			<span>Грабовська Яна</span>
+			<span>Красицька Катерина</span>
+			<span>Микитенко Марія </span>
+			<span>Трофимчук Дарина </span>
+			<span>Зелінський Ігор </span>
+			<span>Живило Вікторія</span>
+			<span>Науменко Анна</span>
+			<span>Яременко Антон</span>
+			<span>Басараб Юля</span>
+			<span>Андрущенко Анна </span>
+			<span>Мейсар Андрій</span>
+			<span>Чередниченко Юлія</span>
+			<span>Семенюк Тетяна</span>
+			<span>Льода Христина </span>
+			
+		</div>
+		<div class="other-team col-xs-12 col-sm-6 col-md-7 col-lg-7"></div>
 	</div>
 </div>
