--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -10,18 +10,14 @@
       </button>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="">HOME</a></li>
-        <li><a href="">ABOUT US</a></li>
-        <li><a href="">TEAM</a></li>
-        <li><a href="">ACTIVITIES</a></li>
-        <li><a href="">PROJECTS</a></li>
-        <li><a href="">PARTNERS</a></li>
-        <li><a href="">GALLERY</a></li>
-        <li><a href="">EVENTS</a></li>
-        <li><a href="">FAQ</a></li>
-        <li><a href="">CONTACTS</a></li>
+        <li><a href="">ГОЛОВНА</a></li>
+        <li><a href="">О НАС</a></li>
+        <li><a href="">НАША КОМАДА</a></li>
+        <li><a href="">ПРОВЕДЕНI ЗАХОДИ</a></li>
+        <li><a href="">КОНТАКТИ</a></li>
+        <li><a href="">ЯК СТАТИ ЧЛЕНОМ КРМЮ?</a></li>
       </ul>
      </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
