--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 no-padding text-center">
 
-	<div class="header container col-xs-12 col-sm-12 col-md-10 col-lg-9">
+	<div id="anchor" class="header container col-xs-12 col-sm-12 col-md-10 col-lg-9">
 
 		<div class="header-logo col-xs-6 col-sm-4 col-md-4 col-lg-4">
 
