--- a/app/views/events/about_us.html.erb
+++ b/app/views/events/about_us.html.erb
@@ -22,4 +22,6 @@
 		 <p>КРМЮ проводить різноманітні правові заходи, а саме: лекції, семінари, бесіди, юридичні форуми,
 		 	брейн-ринги, правові ігри тощо. Слухачами даних заходів є школярі, студенти, робітники підприємств,
 		 	особи пенсійного віку. </p>
+		
+		<div class=" anchor col-xs-1 col-sm-1 col-md-1 col-lg-1"><a  id="move_up" href="#anchor">Наверх</a></div> 	
 </div>
