--- a/app/views/events/team.html.erb
+++ b/app/views/events/team.html.erb
@@ -1,9 +1,13 @@
 <div class="team-wrapper col-xs-12 col-sm-12 col-md-12 col-lg-12">
 	
+	<h2>Наша команда</h2>
+	
 	<div class="our-team col-xs-12 col-sm-12 col-md-12 col-lg-12"> 
-		<span class="team-name">Жуковський Євген</span>>
-		<div class="team-face col-xs-2 col-sm-2 col-md-2 col-lg-2"></div>
-		<div class="team-text col-xs-10 col-sm-10 col-md-10 col-lg-10">
+		<div class="team-name  col-xs-12 col-sm-12 col-md-12 col-lg-12">Жуковський Євген</div>
+		<div class="team-face col-xs-5 col-sm-3 col-md-3 col-lg-3">
+			<%= image_tag 'team/team2.jpg'%>
+		</div>
+		<div class="team-text col-xs-7 col-sm-9 col-md-9 col-lg-9">
 			<p> Голова КРМЮ. Студент Інституту підготовки кадрів для органів юстиції України НЮУ                 
                    ім. Ярослава Мудрого.</p>
 			<span>Тел.: 093 250 12 12</span>
@@ -12,9 +16,11 @@
 	</div>
 	
 	<div class="our-team col-xs-12 col-sm-12 col-md-12 col-lg-12"> 
-		<span class="team-name">Перестюк Олександр</span>>
-		<div class="team-face col-xs-2 col-sm-2 col-md-2 col-lg-2"></div>
-		<div class="team-text col-xs-10 col-sm-10 col-md-10 col-lg-10">
+		<div class="team-name col-xs-12 col-sm-12 col-md-12 col-lg-12">Перестюк Олександр</div>
+		<div class="team-face col-xs-5 col-sm-3 col-md-3 col-lg-3">
+			<%= image_tag 'team/team2.jpg'%>
+		</div>
+		<div class="team-text col-xs-7 col-sm-9 col-md-9 col-lg-9">
 			<p> Перший заступник Голови КРМЮ. Студент Інституту підготовки кадрів для органів юстиції 
 				України НЮУ ім. Ярослава Мудрого.</p>
 			<span>Тел.:  067 388 61 51</span>
@@ -23,9 +29,11 @@
 	</div>
 	
 	<div class="our-team col-xs-12 col-sm-12 col-md-12 col-lg-12"> 
-		<span class="team-name">Пономаренко Євген</span>>
-		<div class="team-face col-xs-2 col-sm-2 col-md-2 col-lg-2"></div>
-		<div class="team-text col-xs-10 col-sm-10 col-md-10 col-lg-10">
+		<div class="team-name col-xs-12 col-sm-12 col-md-12 col-lg-12">Пономаренко Євген</div>
+		<div class="team-face col-xs-5 col-sm-3 col-md-3 col-lg-3">
+			<%= image_tag 'team/team2.jpg'%>
+		</div>
+		<div class="team-text col-xs-7 col-sm-9 col-md-9 col-lg-9">
 			<p> Другий заступник Голови КРМЮ. Студент Інституту підготовки кадрів для органів    
                  прокуратури України НЮУ ім. Ярослава Мудрого.</p>
 			<span>Тел.:</span>
@@ -34,9 +42,11 @@
 	</div>
 	
 	<div class="our-team col-xs-12 col-sm-12 col-md-12 col-lg-12"> 
-		<span class="team-name">Грицай Вікторія</span>>
-		<div class="team-face col-xs-2 col-sm-2 col-md-2 col-lg-2"></div>
-		<div class="team-text col-xs-10 col-sm-10 col-md-10 col-lg-10">
+		<div class="team-name col-xs-12 col-sm-12 col-md-12 col-lg-12">Грицай Вікторія</div>
+		<div class="team-face col-xs-5 col-sm-3 col-md-3 col-lg-3">
+			<%= image_tag 'team/team2.jpg'%>
+		</div>
+		<div class="team-text col-xs-7 col-sm-9 col-md-9 col-lg-9">
 			<p>  Секретар КРМЮ. Студентка Інституту підготовки кадрів для органів юстиції України 
                   НЮУ ім. Ярослава Мудрого.</p>
 			<span>Тел.:093 818 89 57</span>
@@ -44,7 +54,8 @@
 		</div>
 	</div>
 	<div class="other-team col-xs-12 col-sm-12 col-md-12 col-lg-12">
-		<div class="other-team col-xs-12 col-sm-6 col-md-5 col-lg-5">
+		<p>Інші учасники Координаційної ради молодих юристів при ГУ юстиції у Харківській області:</p>
+		<div class="other-team-name col-xs-12 col-sm-6 col-md-5 col-lg-5">
 			<span>Борис Тарас</span>
 			<span>Крайня Катерина</span>
 			<span>Коновалова Ілона</span>
@@ -65,6 +76,13 @@
 			<span>Льода Христина </span>
 			
 		</div>
-		<div class="other-team col-xs-12 col-sm-6 col-md-7 col-lg-7"></div>
+		<div class="other-team-foto col-xs-12 col-sm-6 col-md-7 col-lg-7">
+			<%= image_tag 'team/team2.jpg'%>
+			<%= image_tag 'team/team2.jpg'%>
+			<%= image_tag 'team/team2.jpg'%>
+			<%= image_tag 'team/team2.jpg'%>
+			
+		</div>
 	</div>
+	<div class=" anchor col-xs-1 col-sm-1 col-md-1 col-lg-1"><a  id="move_up" href="#anchor">Наверх</a></div>
 </div>
