--- a/app/views/events/title_page.html.erb
+++ b/app/views/events/title_page.html.erb
@@ -153,4 +153,6 @@
 		</div>
 		
 	</div>
+	
 </div>
+<div class="anchor col-xs-1 col-sm-1 col-md-1 col-lg-1"><a  id="move_up" href="#anchor">Наверх</a></div>
