--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -12,12 +12,12 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="">ГОЛОВНА</a></li>
-        <li><a href="">О НАС</a></li>
-        <li><a href="">НАША КОМАДА</a></li>
-        <li><a href="">ПРОВЕДЕНI ЗАХОДИ</a></li>
-        <li><a href="">КОНТАКТИ</a></li>
-        <li><a href="">ЯК СТАТИ ЧЛЕНОМ КРМЮ?</a></li>
+        <li><a href="<%= root_path %>">ГОЛОВНА</a></li>
+        <li><a href="<%= about_path %>">О НАС</a></li>
+        <li><a href="<%= team_path %>">НАША КОМАДА</a></li>
+        <li><a href="<%= events_path %>">ПРОВЕДЕНI ЗАХОДИ</a></li>
+        <li><a href="<%= contacts_path %>">КОНТАКТИ</a></li>
+        <li><a href="<%= join_us_path %>">ЯК СТАТИ ЧЛЕНОМ КРМЮ?</a></li>
       </ul>
      </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
