--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -1,3 +1,58 @@
-// Place all the styles related to the Events controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+
+.event-align{
+  text-align: center;
+  .events.container{
+   float: none;
+  }
+}
+
+#events-title{
+  font-size: 48px;
+  display:  block;
+  width: 100%;
+  margin: 25px 0 25px 0; 
+}
+
+.event-all-item{
+  text-align: left;
+  & span{
+    display: none;
+    width: 300px;
+    background-color: rgba(0,255,0,.5);
+    color: white;
+    font-size: 24px;
+    text-align: left;
+    z-index: 999;
+    margin-top: -50px;
+    position: absolute;
+    left: 15px;
+    bottom: 0;
+  }
+  
+  &:hover{
+    cursor: pointer;
+  }
+  
+  &:hover > span{
+    display: block;
+  }
+}
+
+
+
+//----------------------------- SHOW ------------------------------//
+
+#event-description{
+  font-size: 18px;
+  line-height: 1.5em;
+  display: block;
+  padding: 15px 20px 15px 20px;
+  margin: 20px 0 20px 0;
+  text-align: left;
+}
+
+
+.event-item{
+  margin: 0 auto;
+  float: none!important;
+}
