--- a/app/views/events/title_page.html.erb
+++ b/app/views/events/title_page.html.erb
@@ -112,16 +112,16 @@
 
 
 <div class="partners container col-xs-12 col-sm-12 col-md-12 col-lg-12">
-	<a href="google.com">
+	<a href="http://google.com">
 		<%= image_tag 'partners/geyc.png'%>
 	</a>
-	<a href="google.com">
+	<a href="http://google.com">
 		<%= image_tag 'partners/tdm.png'%>
 	</a>
-	<a href="google.com">
+	<a href="http://google.com">
 		<%= image_tag 'partners/vivid.png'%>
 	</a>
-	<a href="google.com">
+	<a href="http://google.com">
 		<%= image_tag 'partners/droni.png'%>
 	</a>
 </div>
@@ -153,4 +153,9 @@
 		</div>
 		
 	</div>
+</div>
+
+
+<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+	<%= render 'messages/message'%>
 </div>
