--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -24,7 +24,7 @@
     </div>
   </fieldset>
   
-  <%= show_simple_captcha(:object => 'message', :label => "human authentication") %>
+  <%= raw recaptcha_tags %>
   
   <fieldset>
     <div class="field">
