--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -10,10 +10,10 @@
 					<td>
 						<ul>
 							<li>
-						<i class="fa fa-facebook-square"> </i>
+						<a href="#"<i class="fa fa-facebook-square"> </i></a>
 						</li>
 						<li>
-						<i class="fa fa-vk"> </i>
+						<a href="#"<i class="fa fa-vk"> </i></a>
 						</li>
 						
 						</td>
