--- a/app/views/message_mailer/new_message.text.erb
+++ b/app/views/message_mailer/new_message.text.erb
@@ -1,3 +1,16 @@
-<%= @message.name %> <<%= @message.email %>> написал:
+Новая анкета!
+
+Ф.И.О: <%= @message.name %>
+
+Год рождения: <%= @message.year_birth %>
+
+Телефон: <%= @message.phone %>
+
+E-mail: <%= @message.email%>
+
+Место работы / обучения: <%= @message.studywork%>
+
+Почему хочу стать членом КСМЮ: <%= @message.why%>
+
 
 <%= @message.content %>
