--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -30,7 +30,7 @@
   
   <fieldset>
     <div class="field">
-      <%= message_form.submit "Вiдправити", id: "submitbtn" %>
+      <%= message_form.submit "ВIДПРАВИТИ", id: "submitbtn" %>
     </div>
   </fieldset>
 <% end %>
