--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -5,7 +5,7 @@
 	Якщо Ви бажаєте вступити до лав Координаційної ради молодих юристів при ГУ юстиції у Харківській області та прийняти участь у розвитку правової свідомості та правової культури населення і змінити нашу державу на краще – заповнюйте анкету, надсилайте її нам та ми зв’яжемося з Вами.
 </p>
 <p id="notice"><%= notice %></p>
-<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 no-padding">
 	<%= render 'messages/message'%>
 </div>
 
@@ -16,7 +16,6 @@
 <script>
 
 document.getElementById("submitbtn").disabled = true;
-
 
 var enableBtn  =  function(){
 document.getElementById("submitbtn").disabled = false;
