--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,7 +25,7 @@
 					<td>
 						<ul>
 							<li>
-						<a href="#"<i class="fa fa-facebook-square"> </i></a>
+						<a href="#"> <i class="fa fa-facebook-square"> </i></a>
 						</li>
 						<li>
 						<a href="#"><i class="fa fa-vk"> </i></a>
