--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -16,8 +16,8 @@
 
 
 
-<script type="text/javascript", 'data-turbolinks-eval'="false">  
-  $(document).bind('page:change', function(){
-    $('.fancybox').fancybox({ parent: "body"})
-  });
+<script>
+
+$('.fancybox').fancybox({ parent: "body"});
+
 </script>
