--- a/app/assets/stylesheets/about-us.scss
+++ b/app/assets/stylesheets/about-us.scss
@@ -1,5 +1,8 @@
 .about-us-wrapper{
   position:relative;
+  margin: 0px auto;
+  float: none!important;
+  text-align: left;
   & h2{
     font-weight:bold;
   }
