--- a/app/views/events/about_us.html.erb
+++ b/app/views/events/about_us.html.erb
@@ -1,5 +1,6 @@
-<div class="about-us-wrapper col-xs-12 col-sm-12 col-md-12 col-lg-12">
-	<h2>О нас</h2>
+<div class="event-align col-xs-12 col-sm-12 col-md-12 col-lg-12 no-padding">
+<div class="about-us-wrapper col-xs-12 col-sm-12 col-md-10 col-lg-9">
+	<h2>Про нас</h2>
 	<p>Координаційна рада молодих юристів при Головному управлінні юстиції у Харківській
 		області  була створена у 2008 році Наказом начальника ГУ юстиції у Харківській області.
 		Координаційна рада молодих юристів є  консультативно – дорадчим  органом при Головному
@@ -24,4 +25,5 @@
 		 	особи пенсійного віку. </p>
 		
 		<div class=" anchor col-xs-1 col-sm-1 col-md-1 col-lg-1"><a  id="move_up" href="#anchor">Наверх</a></div> 	
+</div>
 </div>
