--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,7 +1,7 @@
 <div class="event-align col-xs-12 col-sm-12 col-md-12 col-lg-12 no-padding">
 	<div class="events container col-xs-12 col-sm-12 col-md-10 col-lg-9">
 
-		<span id="events-title"> ПРОВЕДЕНI ЗАХОДИ</span>
+		<h2> Проведенi заходи </h2>
 
 		<div class="events-all col-xs-12 col-sm-12 col-md-12 col-lg-12">
 			<% @events.each do |event|%>
