--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,7 +1,7 @@
 <div class="event-align col-xs-12 col-sm-12 col-md-12 col-lg-12 no-padding">
 	<div class="event-item col-xs-12 col-sm-12 col-md-10 col-lg-9">
 		
-		<span id="events-title"> <%= @event.name %> </span>
+		<h2> <%= @event.name %> </h2>
 		<span id="event-description"> <%= @event.description %> </span>
 		<% @event.regular_images.each do |reg_img|%>
 			<div class="regular-image col-xs-12 col-sm-4 col-md-4 col-lg-3">
