--- a/app/views/events/contacts.html.erb
+++ b/app/views/events/contacts.html.erb
@@ -1,5 +1,6 @@
-<div class="contacts-wrapper container col-xs-12 col-sm-12 col-md-12 col-lg-12">
-	
+<div class="event-align col-xs-12 col-sm-12 col-md-12 col-lg-12 no-padding">
+<div class="contacts-wrapper container col-xs-12 col-sm-12 col-md-10 col-lg-9">
+	<h2> ЯК З НАМИ ЗВ'ЯЗАТИСЯ </h2>
 		<div class="contacts col-xs-12 col-sm-12 col-md-12 col-lg-12">
 			<div class="foto-contacts col-xs-12 col-sm-6 col-md-6 col-lg-6">
 				<%= image_tag 'image.jpg'%>
@@ -12,4 +13,5 @@
 			
 		</div>
 		<div class="questions-formcol-xs-12 col-sm-8 col-md-offset-3 col-md-6 col-lg-offset-3 col-lg-6"></div>
+</div>
 </div>
