--- a/app/views/events/team.html.erb
+++ b/app/views/events/team.html.erb
@@ -1,4 +1,5 @@
-<div class="team-wrapper col-xs-12 col-sm-12 col-md-12 col-lg-12">
+<div class="event-align col-xs-12 col-sm-12 col-md-12 col-lg-12 no-padding">
+<div class="team-wrapper col-xs-12 col-sm-12 col-md-10 col-lg-9">
 	
 	<h2>Наша команда</h2>
 	
@@ -54,7 +55,7 @@
 		</div>
 	</div>
 	<div class="other-team col-xs-12 col-sm-12 col-md-12 col-lg-12">
-		<p>Інші учасники Координаційної ради молодих юристів при ГУ юстиції у Харківській області:</p>
+		<p id="others-team">Інші учасники Координаційної ради молодих юристів при ГУ юстиції у Харківській області:</p>
 		<div class="other-team-name col-xs-12 col-sm-6 col-md-5 col-lg-5">
 			<span>Борис Тарас</span>
 			<span>Крайня Катерина</span>
@@ -85,4 +86,5 @@
 		</div>
 	</div>
 	<div class=" anchor col-xs-1 col-sm-1 col-md-1 col-lg-1"><a  id="move_up" href="#anchor">Наверх</a></div>
+</div>
 </div>
