--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 no-padding text-center">
+<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 no-padding text-center header">
 
 	<div id="anchor" class="header container col-xs-12 col-sm-12 col-md-10 col-lg-9">
 
