--- a/app/views/events/about_us.html.erb
+++ b/app/views/events/about_us.html.erb
@@ -1,29 +1,35 @@
 <div class="event-align col-xs-12 col-sm-12 col-md-12 col-lg-12 no-padding">
 <div class="about-us-wrapper col-xs-12 col-sm-12 col-md-10 col-lg-9">
 	<h2>Про нас</h2>
-	<p>Координаційна рада молодих юристів при Головному управлінні юстиції у Харківській
-		області  була створена у 2008 році Наказом начальника ГУ юстиції у Харківській області.
-		Координаційна рада молодих юристів є  консультативно – дорадчим  органом при Головному
-		управлінні юстиції у Харківській області, який  створюється  з метою об’єднання  зусиль молодих
-		юристів  в утвердженні  високої ролі  професії юриста, координації  діяльності, пов’язаної 
-		з підвищенням  якості  підготовки  фахівців в галузі права, залучення молодих правників
-		 правоосвітньої та правовиховної роботи.</p>
+	<p>Координаційна рада молодих юристів при Головному управлінні юстиції у Харківській області  була створена у 2008 році Наказом начальника ГУ юстиції у Харківській області. Спочатку нас було 6 студентів, які завдяки своєму ентузіазму виконували великий об’єм роботи у сфері правового виховання. Але сьогодні нас вже більше ніж 20 осіб, які виконують чіткий план розвитку правової свідомості та правової культури населення та впевнено змінюють нашу державу на краще. Координаційна рада молодих юристів є  консультативно-дорадчим  органом при Головному  управлінні юстиції у Харківській області, який  створюється  з метою об’єднання  зусиль молодих  юристів  в утвердженні  високої ролі  професії юриста, координації  діяльності, пов’язаної  з підвищенням  якості  підготовки  фахівців в галузі права, залучення молодих правників правоосвітньої та правовиховної роботи.</p>
 		 
 		 <p>Основні завдання та напрямки діяльності Координаційної ради:</p>
 		 <ul>
 		 	<li>підвищення рівня  правових знань населення;</li>
 		 	<li>пошук нових форм  правоосвітньої та правовиховної діяльності;</li>
-		 	<li>підвищення  рівня  та якості   теоретичної  і  практичної  підготовки 
-		 		 студентів  - правників та молодих юристів;</li>
+		 	<li>підвищення  рівня  та якості   теоретичної  і  практичної  підготовки  студентів  - правників та молодих юристів;</li>
 		 	<li>побудова правової держави;</li>
-		 	<li>поширення загальноправових ідей; </li>
+		 	<li>поширення загальноправових ідей;</li>
 		 	<li>розвиток правової свідомості та правової культури населення.</li>
 		 </ul>
 		 
-		 <p>КРМЮ проводить різноманітні правові заходи, а саме: лекції, семінари, бесіди, юридичні форуми,
-		 	брейн-ринги, правові ігри тощо. Слухачами даних заходів є школярі, студенти, робітники підприємств,
-		 	особи пенсійного віку. </p>
-		
+		 <p>Координаційна рада створюється та діє на засадах добровільності, рівності членів Ради, законності, гласності та  не обмежує свободу  вибору напрямків  діяльності.  </p>
+		 <p>
+		 	КРМЮ проводить різноманітні правові заходи, а саме: лекції, семінари, бесіди, юридичні форуми, брейн-ринги, правові ігри тощо. Слухачами даних заходів є школярі, студенти, робітники підприємств, особи пенсійного віку. Інколи, такі заходи проводяться разом із представниками поліції, судової адміністрації та інших органів виконавчої влади. 
+		 	</p>
+		  <p>
+		  	Переваги участі у діяльності Координаційної ради молодих юристів:
+		 </p>
+		 <ul>
+		 	<li> розвиток власних професійних навичок; </li>
+		 	<li> розвиток навиків у сфері ораторського мистецтва; </li>	
+		 	<li> знайомство з новими людьми; </li>	
+		 	<li> особистий вклад у розвиток правової свідомості та правової культури населення; </li>	
+		 	<li> додаткові «бонуси» при працевлаштуванні; </li>
+		 </ul>
+		 <p>
+		 	Ми впевнені, що наша діяльність допоможе нашому суспільству здійснити той важливий крок у світле майбутнє, адже який сенс навіть у самих демократичних законах, якщо народ України їх не буде розуміти і не зможе застосовувати у реальному житті. Разом ми зможемо створити демократичне та соціально-свідоме суспільство.
+		 </p>	
 		<div class=" anchor col-xs-1 col-sm-1 col-md-1 col-lg-1"><a  id="move_up" href="#anchor">Наверх</a></div> 	
 </div>
 </div>
