--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,7 @@
 		<div class="header-text col-xs-6 col-sm-5 col-md-6 col-lg-6">
 			<table>
 				<tr>
-					<td> Харкiвська координацiйна рада молодих юристiв</td>
+					<td> Координаційна рада молодих юристів створена при Головному управлінні юстиції у Харківській області</td>
 				</tr>
 			</table>
 		</div>
