--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -13,7 +13,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="<%= root_path %>">ГОЛОВНА</a></li>
-        <li><a href="<%= about_path %>">О НАС</a></li>
+        <li><a href="<%= about_path %>">ПРО НАС</a></li>
         <li><a href="<%= team_path %>">НАША КОМАДА</a></li>
         <li><a href="<%= events_path %>">ПРОВЕДЕНI ЗАХОДИ</a></li>
         <li><a href="<%= contacts_path %>">КОНТАКТИ</a></li>
