--- a/app/assets/stylesheets/title_page.scss
+++ b/app/assets/stylesheets/title_page.scss
@@ -52,7 +52,7 @@ div.item{
 }
 
 .text-column{
-  background-color: #F0FFF0;
+  background-color: #19b9b1;
   text-align: center;
   float: left;
   display: inline-block;
@@ -62,7 +62,7 @@ div.item{
     display: block;
     font-family: Courier;
     font-size: 18px;
-    color: #3CB371;
+    color: #14a095;
     padding-bottom: 20px;
     text-align: left;
     font-weight: 600;
@@ -125,6 +125,7 @@ div.item{
   margin-bottom: 55px;
   & .team-member{
     text-align: center;
+    margin-bottom: 25px;
     & img{
       width: 150px;
       height: 150px;
@@ -136,7 +137,7 @@ div.item{
       display: block;
     font-family: Courier;
     font-size: 18px;
-    color: #3CB371;
+    color: #14a095;
     padding-bottom: 20px;
     font-weight: 600;
     }
