--- a/app/assets/stylesheets/join_us.scss
+++ b/app/assets/stylesheets/join_us.scss
@@ -56,14 +56,14 @@ form{
   height: 60px!important;
   line-height: 60px!important;
   font-size: 24px!important;
-  background-color: green;
+  background-color: #19b9b1;
   border-radius: none;
   color: white;
   border: none;
   &:hover{
     cursor: pointer;
-    font-size: 32px!important;
-    transition: .5s ease;
+    background-color: #14a095;
+    transition: .3s ease;
   }
 }
 }
