--- a/app/views/events/title_page.html.erb
+++ b/app/views/events/title_page.html.erb
@@ -112,17 +112,14 @@
 
 
 <div class="partners container col-xs-12 col-sm-12 col-md-12 col-lg-12">
-	<a href="http://google.com">
-		<%= image_tag 'partners/geyc.png'%>
+	<a href="http://justic.kh.ua">
+		<%= image_tag 'partners/kharkov-just.png'%>
 	</a>
-	<a href="http://google.com">
-		<%= image_tag 'partners/tdm.png'%>
+	<a href="https://minjust.gov.ua/ua">
+		<%= image_tag 'partners/ukr-minjust.png'%>
 	</a>
 	<a href="http://google.com">
 		<%= image_tag 'partners/vivid.png'%>
-	</a>
-	<a href="http://google.com">
-		<%= image_tag 'partners/droni.png'%>
 	</a>
 </div>
 
