--- a/app/assets/stylesheets/join_us.scss
+++ b/app/assets/stylesheets/join_us.scss
@@ -68,4 +68,16 @@ form{
 }
 }
 
-
+.anchor{
+  & a{
+    position:fixed;
+    right: 25px;
+    bottom: 80px;
+    display:none;
+    & img{
+      height:30px;
+      width:30px;
+    }
+  }
+}
+a:focus {outline: none;}
