--- a/app/assets/stylesheets/team.scss
+++ b/app/assets/stylesheets/team.scss
@@ -63,6 +63,10 @@ h2{
     right: 25px;
     bottom: 80px;
     display:none;
+     & img{
+      height:30px;
+      width:30px;
+    }
   }
 }
 a:focus {outline: none;}
