--- a/app/views/events/about_us.html.erb
+++ b/app/views/events/about_us.html.erb
@@ -30,6 +30,6 @@
 		 <p>
 		 	Ми впевнені, що наша діяльність допоможе нашому суспільству здійснити той важливий крок у світле майбутнє, адже який сенс навіть у самих демократичних законах, якщо народ України їх не буде розуміти і не зможе застосовувати у реальному житті. Разом ми зможемо створити демократичне та соціально-свідоме суспільство.
 		 </p>	
-		<div class=" anchor col-xs-1 col-sm-1 col-md-1 col-lg-1"><a  id="move_up" href="#anchor">Наверх</a></div> 	
+		<div class=" anchor col-xs-1 col-sm-1 col-md-1 col-lg-1"><a  id="move_up" href="#anchor"><%= image_tag 'arrow.png'%></a></div> 	
 </div>
 </div>
