--- a/app/assets/stylesheets/title_page.scss
+++ b/app/assets/stylesheets/title_page.scss
@@ -154,11 +154,15 @@ div.item{
 }
 
 .anchor{
-  & a{
+   & a{
     position:fixed;
     right: 25px;
     bottom: 80px;
     display:none;
+      & img{
+      height:30px;
+      width:30px;
+    }
   }
 }
 a:focus {outline: none;}
