--- a/app/views/events/join_us.html.erb
+++ b/app/views/events/join_us.html.erb
@@ -11,6 +11,7 @@
 
 
 </div>
+<div class=" anchor col-xs-1 col-sm-1 col-md-1 col-lg-1"><a  id="move_up" href="#anchor"><%= image_tag 'arrow.png'%></a></div> 
 </div>
 
 <script>
